welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:-6: error: Missing closing brace `}' assumed here
try {
^lastDigit:1: error: expected class or object definition
def lastDig(a:Int):Int = {
^lastDigit:6: error: expected class or object definition
def lastDigit(a:Int, b:Int):Boolean = {return (lastDig(a)==lastDig(b)) 
^